--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,15 +21,70 @@ code {
   font-weight: bold;
 }
 
-.nav ul {
+.nav {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   text-decoration: none;
+  padding-bottom: 20px;
 }
 .active {
   font-weight: bold;
 }
-.center {
+.inactive {
+  font-weight: normal;
+}
+.mainContainer {
   text-align: center;
+  padding-top: 20px;
+  border-style: solid;
+  border-color: #61dafb;
+  height: 500px;
+}
+.optionInfo{
+  width: 400px;
+  height: 60px;
+  display: table-column;
+  padding: 10px;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+
+.createPollButton {
+  border-top: 1px solid #96d1f8;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+  background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+  background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+  background: -o-linear-gradient(top, #3e779d, #65a9d7);
+  padding: 17px 34px;
+  -webkit-border-radius: 28px;
+  -moz-border-radius: 28px;
+  border-radius: 28px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: #fbffed;
+  font-size: 21px;
+  font-family: Georgia, serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+.createPollButton:hover {
+  border-top-color: #28597a;
+  background: #28597a;
+  color: #fcfffd;
+}
+.createPollButton:active {
+  border-top-color: #0f7ac2;
+  background: #0f7ac2;
+}
+.createPollButton:disabled {
+  border-top-color: #0f7ac2;
+  background: grey;
 }
